--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
     <head> 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>    
-        <link rel="stylesheet" href="./campana.css">    
-        <title>CAMPANA</title> 
+        <link rel="stylesheet" href="./penthouse.css">    
+        <title>PENTHOUSE</title> 
         <!-- Security Headers -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';">
         <meta http-equiv="X-Content-Type-Options" content="nosniff">
@@ -31,8 +31,8 @@
           
                     <div class="video-section">
                         <video width="260" height="260" controls muted>
-                            <source src="horno.mp4" type="video/mp4">
-                            <source src="horno.webm" type="video/webm">
+                            <source src="" type="video/mp4">
+                            <source src="" type="video/webm">
                         </video>
                         <h2>Horno / Oven</h2>
                         <p>En este video os mostramos como usar el horno </p>
@@ -42,8 +42,8 @@
                     
                     <div class="video-section">
                         <video width="260" height="260" controls muted>
-                            <source src="microondas.mp4" type="video/mp4">
-                            <source src="microondas.webm" type="video/webm">
+                            <source src="" type="video/mp4">
+                            <source src="" type="video/webm">
                         </video>
                         <h2>Microondas/ Microwave</h2>
                         <p>En este video os mostramos como usar el Microondas </p>
@@ -52,8 +52,8 @@
 
                     <div class="video-section">
                         <video width="260" height="260" controls muted>
-                            <source src="campana.mp4" type="video/mp4">
-                            <source src="campana.webm" type="video/webm">
+                            <source src="" type="video/mp4">
+                            <source src="" type="video/webm">
                         </video>
                         <h2>Vitroceramica/ Electric Hob</h2>
                         <p>En este video os mostramos como usar nuestra vitroceramica.</p>
