--- a/index copy.html
+++ b/index copy.html
@@ -12,15 +12,14 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head> 
     <body> 
+        <nav>
+            <a href="Penthousechico.html" title="Penthouse Izquierdo"
+        </nav>
         <div class="page-nav">
             <div class="page-content">
                 <h1> USO DE LOS ELECTRODOMESTICOS/USE OF APPLIANCES </h1>
                 <p> En lo siguientes videos te explicamos brevemente como funcionan nuestros electrodomesticos </p>
                 <p>In the following videos we briefly explain how our appliances work.</p>
-
-                <nav>
-                    <a href="Penthousechico.html">Penthouse chico </a>
-                </nav>
                
                 <div class="video-grid">
                     <div class="video-section">
