--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 <nav>
                     <a href="Penthousechico.html">Penthouse chico </a>
 
-                   <a href="Penthousechico.html">Penthouse chico </a>
                 </nav>
-               
+                <nav>
+                    <a href="Penthousegrande.html">Penthouse chico </a>
+
+                </nav>
               
             </div>
         </div>
