--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div>
                     <!-- Contenedor de las pestañas -->
                     <div class="tabs">
-                      <a href="Penthousechico.html" class="tab-link active" data-tab="tab1">Pestaña 1</a>
-                      <a href="Penthousegrande.html" class="tab-link" data-tab="tab2">Pestaña 2</a>
+                      <a href="Penthousechico.html" class="tab-link active" data-tab="tab1">PENTHOUSE CHICO </a>
+                      <a href="Penthousegrande.html" class="tab-link" data-tab="tab2">PENTHOUSE GRANDE </a>
                     </div>
                 
                    
