--- a/Penthousegrande.html
+++ b/Penthousegrande.html
@@ -17,6 +17,13 @@
                 <h1> USO DE LOS ELECTRODOMESTICOS/USE OF APPLIANCES </h1>
                 <p> En lo siguientes videos te explicamos brevemente como funcionan nuestros electrodomesticos </p>
                 <p>In the following videos we briefly explain how our appliances work.</p>
+
+                  <a href="index.html" class="home-icon" title="Ir a la página principal">
+              <!-- Icono de casa SVG -->
+                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" viewBox="0 0 24 24">
+                      <path d="M12 3l9 9h-3v9h-12v-9h-3z"/>
+                         </svg>
+                                </a>
                
                 <div class="video-grid">
                     <div class="video-section">
