--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div>
                     <!-- Contenedor de las pestañas -->
                     <div class="tabs">
-                      <a href="Penthousechico.html" class="tab-link active" data-tab="tab1">PENTHOUSE IZQUIERDA</a>
-                      <a href="Penthousegrande.html" class="tab-link" data-tab="tab2">PENTHOUSE DERECHA </a>
+                      <a href="Penthousechico.html" class="tab-link active" data-tab="tab1">PENTHOUSE IZQUIERDA / PENTHOUSE LEFT </a>
+                      <a href="Penthousegrande.html" class="tab-link" data-tab="tab2">PENTHOUSE DERECHA/ PENTHOUSE RIGHT </a>
                     </div>
                     
                       <a href="index.html" class="home-icon" title="Ir a la página principal">
